@@ -3,6 +3,8 @@
     <string id="200">Delfiga suhtlemisel ilmnes tõrge.</string>
     <string id="201">Veateade:</string>
     <string id="202">Ilmselt pole praegu ühtegi Live ülekannet.</string>
+    <string id="30005">Voo aadressi leidmine nurjus.</string>
+    <string id="30006">L!VE salvestused</string>
     <!-- seaded -->
     <string id="30002">Üldine</string>
     <string id="30003">Portaal</string>
