@@ -1,3 +1,8 @@
+[B]Version 0.0.3[/B]
+- Support for new tv.delfi.ee / tv.delfi.ee tugi
+- Known issue: LV & LT delfi support is broken :( / delfi LV ja LT tugi katki :(
+- Fixed first run connection error / Esimesel käivitusel ei tule enam võrguühenduse viga 
+- Support for XBMC 13 Gotham / XBMC 13 Gothami tugi
 [B]Version 0.0.2[/B]
 - Support multiple live setreams / Mitme Live TV voo tugi
 - Unicode error messages / Unicode veateated
